--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/task-1.js" type="task-1"></script>
-    <script src="./js/task-2.js" type="task-1"></script>
-    <script src="./js/task-3.js" type="task-1"></script>
+    <script src="/js/task-1.js"></script>
+    <script src="/js/task-2.js"></script>
+    <script src="/js/task-3.js"></script>
   </body>
 </html>
